--- a/src/citra_qt/configuration/configure_graphics.ui
+++ b/src/citra_qt/configuration/configure_graphics.ui
@@ -233,6 +233,13 @@
         </item>
        </layout>
       </item>
+       <item>
+       <widget class="QCheckBox" name="toggle_format_reinterpret_hack">
+        <property name="text">
+         <string>Ignore Format Reinterpretation</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
