--- a/src/citra_qt/configuration/configure_graphics.ui
+++ b/src/citra_qt/configuration/configure_graphics.ui
@@ -220,6 +220,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QCheckBox" name="toggle_format_reinterpret_hack">
+        <property name="text">
+         <string>Ignore Format Reinterpretation</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_11">
         <item>
          <widget class="QLabel" name="label_2">
