--- a/src/citra_qt/configuration/configure_enhancements.ui
+++ b/src/citra_qt/configuration/configure_enhancements.ui
@@ -19,6 +19,30 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+      <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_7">
+         <item>
+          <widget class="QCheckBox" name="FMV_hack">
+           <property name="text">
+            <string>FMV Hack (CoreTiming AddTicks)</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="AddTicks">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>999999</number>
+           </property>
+           <property name="value">
+            <number>16000</number>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QGroupBox" name="rendererBox">
